--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <img src="assets/img/portfolio/moovies-app.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Moovies!</h4>
-              <p>App</p>
+              <p>React</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/moovies-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://moovies-search.netlify.app/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -366,7 +366,7 @@
             <img src="assets/img/portfolio/dolla_hp_thumb.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>dolla</h4>
-              <p>Web</p>
+              <p>React</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/dolla_hp.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="https://dolla-virtual-banking.netlify.app/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -380,7 +380,7 @@
             <img src="assets/img/portfolio/react_expense_tracker_thumb.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Simple React Expense Tracker</h4>
-              <p>App</p>
+              <p>React App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/react_expense_tracker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="https://react-expense-income-tracker.netlify.app/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
